// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageComponent should render error when search finished with error 1`] = `
<app-page
  searchComponent={[Function SearchComponent]}
>
  <app-search />
  
  
  <app-search-error />
  
</app-page>
`;

exports[`PageComponent should render only search form by default 1`] = `
<app-page
  searchComponent={[Function SearchComponent]}
>
  <app-search />
  
  
  
  
</app-page>
`;

exports[`PageComponent should render search results when search finished 1`] = `
<app-page
  searchComponent={[Function SearchComponent]}
>
  <app-search />
  
  <app-search-results />
  
  
</app-page>
`;

exports[`PageComponent should render spinner when search started 1`] = `
<app-page
  searchComponent={[Function SearchComponent]}
>
  <app-search />
  <app-search-spinner />
  
  
  
</app-page>
`;
